agoge-pricing/force-app/main/default/objects/Order/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <description>Order delivery date</description>
    <label>DeliveryDate</label>
    <type>Date</type>
</CustomField>