agoge-pricing/force-app/main/default/objects/Order/fields/DeliveryDateERP__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDateERP__c</fullName>
    <label>Delivery Date ERP</label>
    <type>Date</type>
</CustomField>