agoge-pricing/force-app/main/default/objects/Order/fields/EmailSent__c.field-meta.xml
<CustomField>
    <fullName>EmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email has been sent</description>
    <label>EmailSent</label>
    <type>Checkbox</type>
</CustomField>