agoge-pricing/force-app/main/default/objects/Order/fields/IntegrationLogInbound__c.field-meta.xml
<CustomField>
    <fullName>IntegrationLogInbound__c</fullName>
    <externalId>true</externalId>
    <label>Integration Log Inbound</label>
    <length>100</length>
    <type>Text</type>
</CustomField>