agoge-pricing/force-app/main/default/objects/Order/fields/IntegrationLogOutbound__c.field-meta.xml
<CustomField>
    <fullName>IntegrationLogOutbound__c</fullName>
    <externalId>true</externalId>
    <label>Integration Log Outbound</label>
    <length>100</length>
    <type>Text</type>
</CustomField>