agoge-pricing/force-app/main/default/objects/Order/fields/OrderDelivered__c.field-meta.xml
<CustomField>
    <fullName>OrderDelivered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Order has been delivered</description>
    <label>OrderDelivered</label>
    <type>Checkbox</type>
</CustomField>