agoge-pricing/force-app/main/default/objects/Order/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <label>Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>