agoge-pricing/force-app/main/default/objects/Order/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>